# f205demo

./: .gitignore  CMakeLists.txt  README.md
app/: application.c  application.cpp  application.h  version.h
app/debug/: log_libs.c  log_libs.h
app/dwt/: dwt.c
app/ee24/: ee24Config.h
app/melodies/: bumer.cpp  bumer.h  melody.h  tone.cpp  tone.hpp
config/: burn.jlink.in  common.cmake  desktop.cmake  mcu.cmake  utils.cmake
cubemx/f205/: STM32F205RGTx_FLASH.ld  f205_test.ioc
cubemx/f205/Core/Inc/: main.h  melody.h  stm32f2xx_hal_conf.h  stm32f2xx_it.h
cubemx/f205/Core/Src/: gpio.c  main.c  stm32f2xx_hal_msp.c  stm32f2xx_it.c  usart.c
cubemx/f205/Drivers/STM32F2xx_HAL_Driver/Src/: stm32f2xx_hal_gpio.c
cubemx/f205/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc/: usbd_cdc.h
cubemx/f205/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
cubemx/f205/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c
cubemx/v15_1/: .mxproject  Makefile  STM32F205RGTx_FLASH.ld  v15_1.ioc
cubemx/v15_1/Core/Inc/: main.h  stm32f2xx_hal_conf.h  stm32f2xx_it.h
cubemx/v15_1/Core/Src/: gpio.c  main.c  stm32f2xx_hal_msp.c  stm32f2xx_it.c  usart.c
cubemx/v15_1/USB_DEVICE/App/: usbd_cdc_if.c  usbd_desc.c
cubemx/v15_1_composite/: .mxproject  Makefile  v15_1.ioc
cubemx/v15_1_composite/Composite/: AL94.I-CUBE-USBD-COMPOSITE_conf.h
cubemx/v15_1_composite/Core/Src/: main.c  stm32f2xx_it.c  usb_otg.c
libs/serial_monster/include/: sgpio.h  system_interrupts.h  usb_core.h  usb_io.h
libs/serial_monster/sources/: device_config.c  sgpio.c  status_led.c  system_clock.c  system_interrupts.c  usb_cdc.c  usb_io.c  usb_panic.c  usb_uid.c
patches/: 0001-support-two-usb.patch  0002-fixed-usb-tx-rx-on-com2.patch  0003-fixed-for-win.patch
resources/: redmi_composite_lsusb.txt  stm32_composite_lsusb.txt
scripts/: flash.ps1  flash.sh  rtt-client.py  rtt-start.sh
ses/: STM32F205RG_MemoryMap.xml  STM32F20x_Registers.xml  STM32F2xx_Flash.icf  f205_test.emProject  f205_test.emSession
ses/STM32F2xx/Source/: STM32F20x_Vectors.s  STM32F2xx_Startup.s
targets/: CMakeLists.txt
targets/f205/: CMakeLists.txt
targets/v15_1/: CMakeLists.txt
targets/v15_1_cdc/: CMakeLists.txt
targets/v15_1_composite/: CMakeLists.txt
